--- a/main.css
+++ b/main.css
@@ -87,7 +87,7 @@ a {
   width: 0px;
   height: 20px;
   font-size: 12px;
-  background-image: url("/magnifying-glass (2).svg");
+  background-image: url("magnifying-glass(2).svg");
   background-position: 10px 5px;
   background-size: 22px;
   background-repeat: no-repeat;
