--- a/main.scss
+++ b/main.scss
@@ -17,6 +17,13 @@
     margin-bottom: 30px;
 }
 
+@mixin wrapContainer {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+
+}
+
 .header {
     position: fixed;
     background: linear-gradient(180deg, $primarmy-color 0%, rgba(27, 31, 36, 0.9) 100%);
@@ -116,7 +123,7 @@
 
 }
 
-.body {
+body {
     background-color: $primarmy-color;
 
 }
@@ -135,9 +142,7 @@
     padding-top: 70px;
     background: linear-gradient(180deg, rgba(11, 11, 12, 0) 0%, #1B1F24 5%);
     min-height: 100vh;
-}
-
-.main {
+    ;
 }
 
 .movies-carousel {
@@ -155,8 +160,90 @@
         transform: scale(104%);
         transition: all 0.2s ease-in-out;
     }
+    max-height: 270.36px
 }
 
-//page 2
+.movie-page-container {
+    @include flexDirection(row);
+    font-family: "Montserrat";
+    font-weight: 300;
+    padding-left: 100px;
+    .movie-img {
+        width: 350px;
+        max-height: unset;
+        &:hover {
+            transform: unset;
+        }
+
+
+    }
+    
+
+    .movie-info-container {
+        padding-left: 60px;
+    }
+
+    .movie-title {
+        font-size: 40px;
+    }
+
+    .movie-overview {
+        font-weight: 100;
+        width: 70%;
+        font-size: 20px;
+        
+
+
+    }
+
+    .genres {
+        color: #a6aab4;
+    }
+
+    .crew p {
+        color: #a6aab4;
+
+    }
+
+    p {
+        margin-bottom: 5px;
+        
+    }
+
+}
+
+.genre-page-container {
+    @include wrapContainer();
+    font-family: "Montserrat";
+    font-size: 20px;
+
+    .genre-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 280px;
+        height: 150px;
+        border-radius: 10px;
+        margin: 10px;
+        color: white;
+        cursor: pointer;
+        background-image: linear-gradient(to left top, #ffffff57, #60609b00);
+
+    }
+
+}
+
+.page-container {
+    background-color: $primarmy-color;
+    .search-movies-container {
+        @include wrapContainer();
+    
+    
+    }
+
+}
+
+
+
 
 
